Improve close checks in save&restore